[package]
name = "redshift"
version = "0.1.0"
authors = ["blangera <blangeram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
sha-1 = "0.9.1"
hex-literal = "0.3.1"

[[bin]]
name = "rsh"
path = "src/main.rs"
